@@ -53,6 +53,7 @@ documents those changes that are of interest to users and administrators.
  -- Do not set "(null)" for SLURM_JOB_CONSTRAINTS when no constraints are set
     in PrologSlurmctld/EpilogSlurmctld.
  -- Add SRUN_EXPORT_ENV as an input environment variable to srun.
+ -- Return an error for invalid #SBATCH directives, and do not submit the job.
 
 * Changes in Slurm 19.05.0pre3
 ==============================
